tests/baselines/reference/thisInSuperCall3.errors.txt
thisInSuperCall3.ts(9,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== thisInSuperCall3.ts (1 errors) ====
    class Base { 
        constructor(a: any) {}
    }
    
    class Foo extends Base {
        public x: number = 0;
    
        constructor() {
            super(this);
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    